# simple-monitor

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/: config.py  logging_setup.py  main.py
src/persistence/: database.py  models.py  queries.py
src/service/: checker.py  cleaner.py  monitor.py  notifier.py
src/storage/: notification_store.py  state_store.py
